[project]
name = "task5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "nest-asyncio>=1.6.0",
    "numpy==1.24.3",
    "pandas>=2.1.0",
    "pathlib>=1.0.1",
    "psutil>=7.0.0",
    "scikit-learn>=1.6.1",
    "surprise>=0.1",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
